<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="viewModel"
            type="com.example.trootechpractical.presentation.firebaseRegister.FirebaseRegisterViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/lilImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="36dp">

        <com.example.trootechpractical.utils.CircleImageView
            android:id="@+id/imgView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/temp_person" />

        <com.example.trootechpractical.utils.CircleImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_camera_icon" />

    </FrameLayout>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:id="@+id/edtName"
        android:hint="@string/enter_name"
        android:text="@={viewModel.registerRequestModel.name}"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lilImageView"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_email_id"
        android:text="@={viewModel.registerRequestModel.email}"
        app:layout_constraintTop_toBottomOf="@+id/edtName"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/edtPassword"
        android:hint="@string/enter_password"
        android:text="@={viewModel.registerRequestModel.password}"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:id="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/already_have_an_account_login"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>